--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
 	compile 'org.codehaus.groovy:groovy-all:2.3.6'
 	compile("org.springframework.boot:spring-boot-starter-data-rest")
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 }
 
 
